--- a/form.html
+++ b/form.html
@@ -103,6 +103,7 @@
             allTransactions.push(transaction);
             localStorage.setItem('transactions', JSON.stringify(allTransactions));
             console.log(allTransactions);
+            form.reset();
         });
     </script>
   
